[gd_scene load_steps=3 format=3 uid="uid://csg78ysibnv4m"]

[ext_resource type="Texture2D" uid="uid://dmiysfky27151" path="res://images/machine_marche_pas.png" id="1_me0b4"]
[ext_resource type="Script" path="res://machine.gd" id="1_nx7s5"]

[node name="machine" type="Node2D"]
script = ExtResource("1_nx7s5")

[node name="bg" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_me0b4")

[node name="Button" type="Button" parent="."]
offset_left = 494.0
offset_top = 589.0
offset_right = 655.0
offset_bottom = 632.0
text = "Retour"

[node name="verser_fiole" type="Button" parent="."]
offset_left = 92.0
offset_top = 277.0
offset_right = 306.0
offset_bottom = 337.0
text = "Verser liquide bleu"

[node name="verser_rouge" type="Button" parent="."]
offset_left = 819.0
offset_top = 287.0
offset_right = 1031.0
offset_bottom = 346.0
text = "Verser liquide rouge"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="verser_fiole" to="." method="_on_verser_fiole_pressed"]
[connection signal="pressed" from="verser_rouge" to="." method="_on_verser_rouge_pressed"]
